--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: NotoSerif;
+  src: url("./assets/fonts/NotoSerif-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: NotoSerif-Variable;
+  font-weight: 100 900;
+  src: url("./assets/fonts/NotoSerif-VariableFont.ttf") format("truetype");
+}
+
 html {
   height: 100%;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 html *,
@@ -17,9 +29,6 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
