--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
 
 @layer base {
   h1 {
-    @apply font-serif font-light uppercase tracking-[0.3rem] text-[34px] md:text-8xl;
+    @apply font-serif font-light uppercase tracking-[0.3rem] text-[34px] lg:text-8xl;
   }
 
   h4 {
@@ -34,7 +34,7 @@
   }
 
   h6 {
-    @apply font-serif font-light uppercase tracking-[0.3rem] text-lg md:text-3xl;
+    @apply font-serif font-light uppercase tracking-[0.3rem] text-lg lg:text-3xl;
   }
 
   label {
@@ -48,7 +48,7 @@
 
 @layer components {
   .button {
-    @apply w-full hover:bg-[rgba(var(--secondary-color),0.2)] border-2 border-white transition-colors duration-300 p-3 md:p-4 uppercase disabled:opacity-50;
+    @apply w-full hover:bg-[rgba(var(--secondary-color),0.2)] border-2 border-white transition-colors duration-300 p-3 lg:p-4 uppercase disabled:opacity-50;
   }
 
   .divider {
@@ -84,7 +84,7 @@
   }
 
   .nav-mobile {
-    @apply sticky top-0 z-40 p-8 flex justify-between items-center transition-opacity duration-300 ease-in-out shadow-md xl:shadow-none;
+    @apply sticky top-0 z-40 p-4 flex justify-between items-center transition-opacity duration-300 ease-in-out shadow-md xl:shadow-none;
   }
 
   .nav-mobile[data-hidden="true"] {
