--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@
   }
 
   .text-field {
-    @apply border-b-2 outline-none required:rounded-none text-white border-t-0 border-l-0 border-r-0 border-[var(--background-color)] text-lg focus:ring-transparent transition-colors duration-500 focus:border-[rgba(var(--secondary-color))] hover:border-[rgba(var(--secondary-color))] block w-full p-4 bg-[var(--primary-color)] disabled:opacity-50;
+    @apply rounded-none border-b-2 outline-none text-white border-t-0 border-l-0 border-r-0 border-[var(--background-color)] text-lg focus:ring-transparent transition-colors duration-500 focus:border-[rgba(var(--secondary-color))] hover:border-[rgba(var(--secondary-color))] block w-full p-4 bg-[var(--primary-color)] disabled:opacity-50;
   }
 
   .text-field[data-should-validate="true"] {
@@ -72,7 +72,7 @@
   }
 
   .text-area {
-    @apply resize-none border-b-2 outline-none required:rounded-none text-white border-t-0 border-l-0 border-r-0 border-[#222222] text-lg focus:ring-transparent transition-colors duration-500 focus:border-fuchsia-400 hover:border-fuchsia-400 block w-full p-4 bg-[#333333] disabled:opacity-50;
+    @apply rounded-none resize-none border-b-2 outline-none text-white border-t-0 border-l-0 border-r-0 border-[#222222] text-lg focus:ring-transparent transition-colors duration-500 focus:border-[rgba(var(--secondary-color))] hover:border-[rgba(var(--secondary-color))] block w-full p-4 bg-[#333333] disabled:opacity-50;
   }
 
   .text-area[data-should-validate="true"] {
@@ -93,6 +93,10 @@
 
   .nav-mobile[data-hidden="false"] {
     @apply opacity-0;
+  }
+
+  .social-link {
+    @apply fill-white transition-colors duration-300 hover:fill-[rgba(var(--secondary-color))] hover:stroke-[rgba(var(--secondary-color))] text-2xl md:text-3xl;
   }
 }
 
