--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 :root {
   --background-color: #181818;
-  --primary-color: rgb(50, 50, 50);
+  --primary-color: 255, 255, 255;
   /* RGB Numberical Values Only */
   --secondary-color: 255, 255, 255;
   --error-color: rgb(119 29 29);
@@ -33,19 +33,55 @@
 
 @layer base {
   h1 {
-    @apply font-serif font-bold outline-white uppercase tracking-[0.3rem] text-[34px] lg:text-8xl;
+    @apply font-serif text-4xl md:text-8xl font-light uppercase tracking-widest;
+  }
+
+  h2 {
+    @apply font-serif text-3xl md:text-6xl font-light tracking-wider;
+  }
+
+  h3 {
+    @apply font-serif text-2xl md:text-5xl;
   }
 
   h4 {
-    @apply text-[rgba(var(--secondary-color))] text-3xl font-body font-thin;
+    @apply font-serif text-xl md:text-[2.125rem] tracking-wide;
+  }
+
+  h5 {
+    @apply font-serif text-lg md:text-2xl;
   }
 
   h6 {
-    @apply font-serif font-light uppercase tracking-[0.3rem] text-lg lg:text-3xl;
+    @apply font-serif text-lg md:text-xl font-medium tracking-[0.15em];
   }
 
-  label {
-    @apply block group-focus-within:font-bold mb-2 text-base text-[var(--text-color)];
+  .subtitle1 {
+    @apply font-sans tracking-tighter text-base;
+  }
+
+  .subtitle2 {
+    @apply font-sans text-sm font-medium tracking-tight;
+  }
+
+  .subtitle2 {
+    @apply font-sans text-sm font-medium;
+  }
+
+  .body1 {
+    @apply font-sans text-base;
+  }
+
+  .body2 {
+    @apply font-sans text-sm;
+  }
+
+  .caption {
+    @apply font-sans text-xs tracking-wider;
+  }
+
+  .overline {
+    @apply font-sans text-xs tracking-wider uppercase decoration-transparent;
   }
 
   .field-validation {
@@ -55,7 +91,31 @@
 
 @layer components {
   .button {
-    @apply w-full hover:bg-[rgba(var(--secondary-color),0.2)] border-2 border-white transition-colors duration-300 p-3 lg:p-4 uppercase disabled:opacity-50;
+    @apply w-full flex justify-center hover:bg-[rgba(var(--secondary-color),0.2)] active:bg-[rgba(var(--primary-color),0.2)] border-2 border-white transition-all duration-300 p-3 lg:p-4 uppercase disabled:opacity-50;
+  }
+
+  .card {
+    @apply p-4;
+  }
+
+  .card-content {
+    @apply grid gap-4;
+  }
+
+  .card-header {
+    @apply grid gap-y-2;
+  }
+
+  .card-body {
+    @apply body1;
+  }
+
+  .card-media {
+    @apply w-full h-64 object-cover object-center cursor-pointer;
+  }
+
+  .card-action-area {
+    @apply grid md:flex items-center gap-4;
   }
 
   .divider {
@@ -71,39 +131,27 @@
   }
 
   .text-field {
-    @apply rounded-none border-b-2 outline-none text-[#ffffff] border-t-0 border-l-0 border-r-0 border-[var(--background-color)] text-lg focus:ring-transparent transition-colors duration-500 focus:border-[rgba(var(--secondary-color))] hover:border-[rgba(var(--secondary-color))] block w-full p-4 bg-[var(--primary-color)] disabled:opacity-50;
+    @apply rounded-none border-b-2 outline-none text-[#ffffff] border-t-0 border-l-0 border-r-0 border-[var(--background-color)] text-lg focus:ring-transparent transition-colors duration-500 focus:border-[rgba(var(--secondary-color))] hover:border-[rgba(var(--secondary-color))] block w-full p-4 bg-[rgba(var(--primary-color),0.2)] disabled:opacity-50;
   }
 
   .text-field[data-should-validate="true"] {
     @apply field-validation;
   }
 
+  .label {
+    @apply block group-focus-within:font-bold mb-2 text-base text-[var(--text-color)];
+  }
+
+  .list {
+    @apply list-none grid gap-4;
+  }
+
   .text-area {
-    @apply rounded-none resize-none border-b-2 outline-none text-[#ffffff] border-t-0 border-l-0 border-r-0 border-[#222222] text-lg focus:ring-transparent transition-colors duration-500 focus:border-[rgba(var(--secondary-color))] hover:border-[rgba(var(--secondary-color))] block w-full p-4 bg-[var(--primary-color)] disabled:opacity-50;
+    @apply rounded-none resize-none border-b-2 outline-none text-[#ffffff] border-t-0 border-l-0 border-r-0 border-[#222222] text-lg focus:ring-transparent transition-colors duration-500 focus:border-[rgba(var(--secondary-color))] hover:border-[rgba(var(--secondary-color))] block w-full p-4 bg-[rgba(var(--primary-color),0.2)] disabled:opacity-50;
   }
 
   .text-area[data-should-validate="true"] {
     @apply field-validation;
-  }
-
-  .nav-desktop {
-    @apply flex flex-col justify-center items-center py-8 bg-[var(--background-color)] transition-all ease-in-out h-[100vh] opacity-100 will-change-auto;
-  }
-
-  .nav-mobile {
-    @apply sticky top-0 z-40 p-4 flex justify-between items-center transition-opacity duration-300 ease-in-out shadow-md xl:shadow-none;
-  }
-
-  .nav-mobile[data-hidden="true"] {
-    @apply bg-[var(--background-color)] xl:bg-transparent;
-  }
-
-  .nav-mobile[data-hidden="false"] {
-    @apply opacity-0;
-  }
-
-  .social-link {
-    @apply fill-white transition-colors duration-300 hover:fill-[rgba(var(--secondary-color))] hover:stroke-[rgba(var(--secondary-color))] text-2xl md:text-3xl;
   }
 }
 
