--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@
   }
 
   h6 {
-    @apply font-serif text-lg md:text-xl font-medium tracking-[0.15em];
+    @apply font-serif text-lg md:text-xl font-medium tracking-[0.15em] uppercase;
   }
 
   .subtitle1 {
