--- a/src/index.css
+++ b/src/index.css
@@ -134,7 +134,7 @@
   }
 
   .Tui-TextField {
-    @apply rounded-none border-b-2 outline-none text-[#ffffff] border-t-0 border-l-0 border-r-0 border-[var(--background-color)] text-lg focus:ring-transparent transition-colors duration-500 focus:border-[rgba(var(--secondary-color))] hover:border-[rgba(var(--secondary-color))] block w-full p-4 bg-[rgba(var(--primary-color),0.2)] disabled:opacity-50;
+    @apply rounded-none border-b-2 outline-none border-t-0 border-l-0 border-r-0 Tui-Body1 focus:ring-transparent transition-colors duration-500 dark:text-white bg-transparent focus:border-primary-400 dark:focus:border-primary-700 hover:border-primary-400 dark:hover:border-primary-700 block w-full p-4 disabled:opacity-50;
   }
 
   .Tui-TextField[data-should-validate="true"] {
@@ -142,7 +142,7 @@
   }
 
   .Tui-Label {
-    @apply block group-focus-within:font-bold mb-2 text-base dark:text-white;
+    @apply block group-focus-within:font-bold text-base dark:text-white;
   }
 
   .Tui-List {
@@ -158,7 +158,7 @@
   }
 
   .Tui-TextArea {
-    @apply rounded-none resize-none border-b-2 outline-none text-[#ffffff] border-t-0 border-l-0 border-r-0 border-[#222222] text-lg focus:ring-transparent transition-colors duration-500 focus:border-[rgba(var(--secondary-color))] hover:border-[rgba(var(--secondary-color))] block w-full p-4 bg-[rgba(var(--primary-color),0.2)] disabled:opacity-50;
+    @apply rounded-none resize-none border-b-2 outline-none border-t-0 border-l-0 border-r-0 text-lg focus:ring-transparent transition-colors duration-500 dark:text-white bg-transparent focus:border-primary-400 dark:focus:border-primary-700 hover:border-primary-400 dark:hover:border-primary-700 block w-full p-4 disabled:opacity-50;
   }
 
   .Tui-TextArea[data-should-validate="true"] {
